add postcss and postcss-preset-env

--- a/client/src/app.css
+++ b/client/src/app.css
@@ -1,27 +1,55 @@
+/* Write your global styles here, in PostCSS syntax */
 :root {
-  font-family: Inter, Avenir, Helvetica, Arial, sans-serif;
-  font-size: 16px;
-  line-height: 24px;
+  /****************************
+   * COLORS
+   ****************************/
+  --color-back: #000000;
+  --color-white: #ffffff;
+  --color-gray: #979797;
+
+  /****************************
+   * FONTS
+   ****************************/
+   @import url('https://fonts.googleapis.com/css2?family=DM+Serif+Display&display=swap');
+
+  /****************************
+   * TYPOGRAPHY
+   ****************************/
+  /* body */
+  font-family: 'DM Serif Display', serif;
   font-weight: 400;
+  font-variant: normal;
+  font-size: 1rem;
+  line-height: 1.2rem;
+  color: var(--color-back);
 
-  color-scheme: light dark;
-  color: rgba(255, 255, 255, 0.87);
-  background-color: #242424;
+  /* Heading 1 */
+  h1 {
+    font-family: 'DM Serif Display', serif;
+    font-weight: 400;
+    font-variant: normal;
+    font-size: 1.5rem;
+    line-height: 1.8rem;
+  }
 
-  font-synthesis: none;
-  text-rendering: optimizeLegibility;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
-  -webkit-text-size-adjust: 100%;
+  /* Heading 2 */
+  h2 {
+    font-family: 'DM Serif Display', serif;
+    font-weight: 400;
+    font-variant: normal;
+    font-size: 1.125rem;
+    line-height: 1.35rem;
+  }
 }
 
 a {
   font-weight: 500;
   color: #646cff;
   text-decoration: inherit;
-}
-a:hover {
-  color: #535bf2;
+
+  &:hover {
+    color: green;
+  }
 }
 
 body {
@@ -50,21 +78,22 @@ h1 {
 
 button {
   border-radius: 8px;
-  border: 1px solid transparent;
+  border: 1px solid var(--color-back);
   padding: 0.6em 1.2em;
   font-size: 1em;
   font-weight: 500;
   font-family: inherit;
-  background-color: #1a1a1a;
+  background-color: var(--color-white);
   cursor: pointer;
   transition: border-color 0.25s;
-}
-button:hover {
-  border-color: #646cff;
-}
-button:focus,
-button:focus-visible {
-  outline: 4px auto -webkit-focus-ring-color;
+
+  &:hover {
+    border-color: #646cff;
+  }
+  &:focus,
+  &:focus-visible {
+    outline: 4px auto -webkit-focus-ring-color;
+  }
 }
 
 @media (prefers-color-scheme: light) {
