--- a/client/src/app.css
+++ b/client/src/app.css
@@ -1,16 +1,40 @@
 /* Write your global styles here, in PostCSS syntax */
-:root {
+:root{
   /****************************
    * COLORS
    ****************************/
-  --color-back: #000000;
+  --color-black: #000000;
   --color-white: #ffffff;
   --color-gray: #979797;
 
   /****************************
    * FONTS
    ****************************/
-   @import url('https://fonts.googleapis.com/css2?family=DM+Serif+Display&display=swap');
+  @import url('https://fonts.googleapis.com/css2?family=DM+Serif+Display&display=swap');
+}
+
+* {
+  box-sizing: border-box;
+}
+
+
+/****************************
+ * LAYOUT
+ ****************************/
+/* For layout purposes */
+html, body {
+  height: 100%;
+}
+
+
+#app {
+  width: 100vw;
+  height: 100vh;
+  padding: 1.25rem;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-content: center;
 
   /****************************
    * TYPOGRAPHY
@@ -39,72 +63,5 @@
     font-variant: normal;
     font-size: 1.125rem;
     line-height: 1.35rem;
-  }
-}
-
-a {
-  font-weight: 500;
-  color: #646cff;
-  text-decoration: inherit;
-
-  &:hover {
-    color: green;
-  }
-}
-
-body {
-  margin: 0;
-  display: flex;
-  place-items: center;
-  min-width: 320px;
-  min-height: 100vh;
-}
-
-h1 {
-  font-size: 3.2em;
-  line-height: 1.1;
-}
-
-.card {
-  padding: 2em;
-}
-
-#app {
-  max-width: 1280px;
-  margin: 0 auto;
-  padding: 2rem;
-  text-align: center;
-}
-
-button {
-  border-radius: 8px;
-  border: 1px solid var(--color-back);
-  padding: 0.6em 1.2em;
-  font-size: 1em;
-  font-weight: 500;
-  font-family: inherit;
-  background-color: var(--color-white);
-  cursor: pointer;
-  transition: border-color 0.25s;
-
-  &:hover {
-    border-color: #646cff;
-  }
-  &:focus,
-  &:focus-visible {
-    outline: 4px auto -webkit-focus-ring-color;
-  }
-}
-
-@media (prefers-color-scheme: light) {
-  :root {
-    color: #213547;
-    background-color: #ffffff;
-  }
-  a:hover {
-    color: #747bff;
-  }
-  button {
-    background-color: #f9f9f9;
   }
 }
