--- a/client/src/app.css
+++ b/client/src/app.css
@@ -11,6 +11,7 @@
    * FONTS
    ****************************/
   @import url('https://fonts.googleapis.com/css2?family=DM+Serif+Display&display=swap');
+  @import url('https://fonts.googleapis.com/css2?family=Manrope:wght@600&display=swap');
 }
 
 * {
