--- a/client/src/app.css
+++ b/client/src/app.css
@@ -1,4 +1,7 @@
 /* Write your global styles here, in PostCSS syntax */
+
+@import "normalize.css";
+
 :root{
   /****************************
    * COLORS
@@ -31,15 +34,11 @@ html, body {
 #app {
   width: 100vw;
   height: 100vh;
-  padding: 1.25rem;
   display: flex;
   flex-direction: column;
   justify-content: center;
   align-content: center;
 
-  /****************************
-   * TYPOGRAPHY
-   ****************************/
   /* body */
   font-family: 'DM Serif Display', serif;
   font-weight: 400;
@@ -47,22 +46,25 @@ html, body {
   font-size: 1rem;
   line-height: 1.2rem;
   color: var(--color-back);
+}
 
-  /* Heading 1 */
-  h1 {
-    font-family: 'DM Serif Display', serif;
-    font-weight: 400;
-    font-variant: normal;
-    font-size: 1.5rem;
-    line-height: 1.8rem;
-  }
+/****************************
+ * TYPOGRAPHY
+ ****************************/
+/* Heading 1 */
+h1 {
+  font-family: 'DM Serif Display', serif;
+  font-weight: 400;
+  font-variant: normal;
+  font-size: 1.5rem;
+  line-height: 1.8rem;
+}
 
-  /* Heading 2 */
-  h2 {
-    font-family: 'DM Serif Display', serif;
-    font-weight: 400;
-    font-variant: normal;
-    font-size: 1.125rem;
-    line-height: 1.35rem;
-  }
+/* Heading 2 */
+h2 {
+  font-family: 'DM Serif Display', serif;
+  font-weight: 400;
+  font-variant: normal;
+  font-size: 1.125rem;
+  line-height: 1.35rem;
 }
