--- a/client/src/app.css
+++ b/client/src/app.css
@@ -9,12 +9,13 @@
   --color-black: #000000;
   --color-white: #ffffff;
   --color-gray: #979797;
+  --color-gray-light: #e5e2e2;
 
   /****************************
    * FONTS
    ****************************/
   @import url('https://fonts.googleapis.com/css2?family=DM+Serif+Display&display=swap');
-  @import url('https://fonts.googleapis.com/css2?family=Manrope:wght@600&display=swap');
+  @import url('https://fonts.googleapis.com/css2?family=Manrope:wght@400;600&display=swap');
 }
 
 * {
