--- a/client/src/app.css
+++ b/client/src/app.css
@@ -83,7 +83,7 @@ input {
   font-family: 'Manrope', serif;
   font-weight: 400;
   font-size: 1rem;
-  height: 2.3rem;
+  height: 50px;
   line-height: 2.3rem;
   padding: 2px 6px;
 }
